Filters fixed and done